<resources>
    <string name="app_name">Ejemplo</string>
    <string name="database_name">CibertecBD</string>
    <string name="ir_a_persona_activity">Ir a Persona Activity</string>
    <string name="recyclerview">ReclyclerView</string>
    <string name="fragments">Ir a FragmentsView</string>
    <string name="proveedor">Proveedor</string>
    <string name="mantenedor_proveedores">Mantenedor Proveedores</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="chats">Chats</string>
    <string name="estados">Estados</string>
    <string name="llamadas">Llamadas</string>


    <string name="lista_proveedores">Lista de Proveedores</string>
    <string name="razon_social">Razón Social</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pais">Pais</string>
    <string name="guardar">guardar</string>
    <string name="hilos">Hilos</string>
    <string name="ejecutar">Ejecutar\n</string>
    <string name="lista_clientes">Lista de Clientes</string>
    <string name="mantenedor_clientes">Mantenedor Clientes</string>
    <string name="categoria">Categoria</string>
    <string name="editar">Editar</string>
</resources>