<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHolaMundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPersonaActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ir_a_persona_activity" />

        <Button
            android:id="@+id/btnRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview" />

        <Button
            android:id="@+id/btnFragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragments" />

        <Button
            android:id="@+id/btnProveedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proveedor" />

        <Button
            android:id="@+id/btnMantenedorProveedores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mantenedor_proveedores" />

        <Button
            android:id="@+id/btnHilos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hilos" />

        <Button
            android:id="@+id/btnMatenedorClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mantenedor_clientes" />


        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>