<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sesion05.fragments.ChatsFragment">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--Inputs-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/lycBienvenida">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/razon_social">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/red"

            android:layout_marginBottom="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopEnd="10dp"
                app:passwordToggleEnabled="true"
                android:hint="@string/app_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmarContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <!--Texto-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/chkTerminos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--Boton Registrar-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="55dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/lycInputs">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:letterSpacing="0.08"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            app:cornerRadius="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="textEnd"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>